style: responsive alignment fixed

--- a/src/Pages/Category/style.scss
+++ b/src/Pages/Category/style.scss
@@ -1,5 +1,5 @@
 .Business {
-    width: 40% !important;
+    max-width: 700px;
 
     .heading {
         display: flex;
@@ -46,6 +46,7 @@
         flex-direction: column;
         align-items: start;
         justify-content: center;
+
     }
 }
 
